# rust_demo_api

./: .env  Cargo.toml
migrations/2020-09-01-221849_demo_data/: up.sql
src/: db.rs  demolition.rs  lib.rs  response_handler.rs  routes.rs  schema.rs  tests.rs
src/models/: demo.rs
