[package]
name = "rust_demo"
version = "0.1.0"
authors = ["aaron.rosano <aaron.rosano@flowhub.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
failure = "0.1.8"
lazy_static = "1.4.0"
